fix: resolve all backend compilation errors - unify packages to ru.lifegame.backend
All imports fixed:
- com.sagat.life_of_t.* → ru.lifegame.backend.*
- com.life_of_t.* → ru.lifegame.backend.*
- NpcProfiles → NpcRegistry
- NpcBehaviorEngine → NpcLifecycleEngine